--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "materialize-css": "^1.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -42,5 +44,5 @@
     "concurrently": "^8.0.1",
     "json-server": "^0.17.3"
   },
-  "proxy": "http://localhost::5000"
+  "proxy": "http://localhost:5000"
 }
